--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
   </head>
   <body>
     <main>
-        <h1>Welcome to the Customer API Server!</h1>  
+        <h1>Welcome to the Customer API Server!</h1>
+        <p>
+          Click <a href="/customers">Here</a> for Customers
+        </p>
+
     </main>
   </body>
 </html>
