--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
         <p>
           Click <a href="/customers">Here</a> for Customers
         </p>
+        <p>
+          Click <a href="/reset">Here</a> for Data Reset
+        </p>
 
     </main>
   </body>
