--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <title>Custom API Server</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <script>
+    </script>
   </head>
   <body>
     <main>
