--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,14 @@
         <p>
           Click <a href="/reset">Here</a> for Data Reset
         </p>
+        <p>
+          Available URLS:/
+        </p>
+        <ul>
+          <li>Search Customer by ID => /customers/:id</li>
+          <li>Search Customers => /customer/find? - queryParms (name - password - email)</li>
+          <li>Create API KEYs => /apikey? - queryParms (email)</li>
+        </ul>
 
     </main>
   </body>
